sandc/test/fixtures/pbtRegression/shouldSucceed/namedPackage/Baz.sand
package com.foobarbaz;

pub class Baz<T extends Foo> {
    qux(n: T): Bar {
        n as! T
    }
}