sandc/test/fixtures/pbtRegression/shouldFail/unqualifiedPackageRefs/namedFromDifferentlyNamed/Foo.sand
package foo;

pub class Foo extends Bar {

}